--- a/GuestReview.html
+++ b/GuestReview.html
@@ -32,13 +32,13 @@
                 </a>
             </div>
 			<div class="w-full max-w-md mb-4 card">
-               <a href="https://www.google.com/travel/hotels/entity/CgsIhNyp1fvvsLn5ARAB/reviews?q=econolodge%20sioux%20falls%20sd&g2lb=2502548%2C2503771%2C2503781%2C2504374%2C4258168%2C4270442%2C4284970%2C4291517%2C4597339%2C4757164%2C4814050%2C4874190%2C4893075%2C4924070%2C496&utm_campaign=sharing&utm_medium=link&utm_source=htls&ved=0CAAQ5JsGahcKEwiQw9S42qqCAxUAAAAAHQAAAAAQBA" class="block p-4 bg-white rounded hover:bg-blue-100 transition duration-150 flex items-center" target="_blank" rel="noopener noreferrer">
+               <a href="https://www.tripadvisor.com/UserReviewEdit-g54805-d104265-Econo_Lodge_North-Sioux_Falls_South_Dakota.html" class="block p-4 bg-white rounded hover:bg-blue-100 transition duration-150 flex items-center" target="_blank" rel="noopener noreferrer">
                     <img src="https://www.vectorlogo.zone/logos/tripadvisor/tripadvisor-icon.svg" alt="TripAdvisor Logo" class="h-8 w-8 mr-4">
                     <span class="text-center text-gray-900 font-medium">Tripadvisor</span>
                 </a>
             </div>
 			<div class="w-full max-w-md mb-4 card">
-               <a href="https://www.google.com/travel/hotels/entity/CgsIhNyp1fvvsLn5ARAB/reviews?q=econolodge%20sioux%20falls%20sd&g2lb=2502548%2C2503771%2C2503781%2C2504374%2C4258168%2C4270442%2C4284970%2C4291517%2C4597339%2C4757164%2C4814050%2C4874190%2C4893075%2C4924070%2C496&utm_campaign=sharing&utm_medium=link&utm_source=htls&ved=0CAAQ5JsGahcKEwiQw9S42qqCAxUAAAAAHQAAAAAQBA" class="block p-4 bg-white rounded hover:bg-blue-100 transition duration-150 flex items-center" target="_blank" rel="noopener noreferrer">
+               <a href="https://www.booking.com/hotel/us/hotel-north-cliff-avenue-souix-falls.en-gb.html?label=gen173rf-1BCAso7AFCJGhvdGVsLW5vcnRoLWNsaWZmLWF2ZW51ZS1zb3VpeC1mYWxsc0gzWANorgKIAQGYAQm4ARfIAQzYAQHoAQGIAgGiAglsaW5rdHIuZWWoAgO4AoWNmqoGwAIB0gIkMDgzZDM2ODgtZmU1ZS00MmMzLTg3ZjAtYjNkMzE0NmQxM2Iw2AIF4AIB&sid=a40b97839b6e17a0b8ca50cd78433a98&dist=0&keep_landing=1&sb_price_type=total&type=total&#tab-reviews" class="block p-4 bg-white rounded hover:bg-blue-100 transition duration-150 flex items-center" target="_blank" rel="noopener noreferrer">
                     <img src="https://www.vectorlogo.zone/logos/booking/booking-icon.svg" alt="Booking Logo" class="h-8 w-8 mr-4">
                     <span class="text-center text-gray-900 font-medium">Booking</span>
                 </a>
